--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
 
   test:
     name: Test 🧪
+    needs: build
     timeout-minutes: 60
     runs-on: windows-latest
     steps:
@@ -110,7 +111,7 @@ jobs:
 
   deploy-release:
     name: Deploy release 🚀🌐
-    needs: [ build, test, doc, deploy]
+    needs: [ build, test, doc ]
     runs-on: windows-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
