--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,6 @@ jobs:
 
   test:
     name: Test 🧪
-    needs: build
     timeout-minutes: 60
     runs-on: windows-latest
     steps:
@@ -57,6 +56,7 @@ jobs:
         uses: softprops/turnstyle@v1
         with:
           same-branch-only: false
++         abort-after-seconds: 1800
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
