Refactor unit tests with a common JSON file containing all the variables needed in integration tests. Create a README to help on the creation of the tests accounts.
This refactoring was needed because Mega has closed the account I was using for 8 years for the integration tests because of "breach of Terms of Service, such as abuse of rights of others; sharing and/or importing illegal data or system abuse". What a joke...

--- a/MegaApiClient.Tests/MegaApiClient.Tests.csproj
+++ b/MegaApiClient.Tests/MegaApiClient.Tests.csproj
@@ -61,6 +61,13 @@
     <None Update="Data\SampleFile_thumbnail.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Data\inputs.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp" Condition="'$(TargetFramework)' == 'net46'" />
   </ItemGroup>
 
 </Project>
